# embedding-manifolds

./: .gitignore  README.md  config.py  manifolds.py  models.py  optimizers.py  pyproject.toml  requirements.txt  run_experiments.py  train.py
embedding_geometry/: __init__.py  __main__.py  data_loader.py  evaluation.py  models.py  run_experiments.py  train.py  visualization.py
transformer_manifold/: __init__.py  config.py  experiments.py  models.py  train.py
