[project]
name = "embedding-manifolds"
version = "0.1.0"
description = "Embedding manifolds project"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "plotly>=5.17.0",
]

[tool.uv]
package = false

